Added documentation for parameters on routes
