# swagger.yaml
@@ -74,6 +74,15 @@ paths:
     post:
       description: Create a new product
       operationId: createProduct
+      parameters:
+      - description: |-
+          Product data structure to Update or Create.
+          Note: the id field is ignored by update and create operations
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/Product'
       responses:
         "201":
           $ref: '#/responses/productResponse'
@@ -83,22 +92,18 @@ paths:
           $ref: '#/responses/errorResponse'
       tags:
       - products
-    put:
-      description: Update a products details
-      operationId: updateProduct
-      responses:
-        "204":
-          $ref: '#/responses/noContentResponse'
-        "404":
-          $ref: '#/responses/errorResponse'
-        "422":
-          $ref: '#/responses/errorValidation'
-      tags:
-      - products
   /products/{id}:
     delete:
       description: Update a products details
       operationId: deleteProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
       responses:
         "204":
           $ref: '#/responses/noContentResponse'
@@ -111,11 +116,47 @@ paths:
     get:
       description: Return a list of products from the database
       operationId: getProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
       responses:
         "200":
           $ref: '#/responses/productResponse'
         "404":
           $ref: '#/responses/errorResponse'
+      tags:
+      - products
+    put:
+      description: Update a products details
+      operationId: updateProduct
+      parameters:
+      - description: |-
+          Product data structure to Update or Create.
+          Note: the id field is ignored by update and create operations
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/Product'
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "204":
+          $ref: '#/responses/noContentResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+        "422":
+          $ref: '#/responses/errorValidation'
       tags:
       - products
 produces:
